# django-rls

./: .antigravityrules  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LOCAL_TESTING.md  Makefile  README.md  SECURITY.md  audit_report.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  reproduce_transaction_issue.py  run_tests_locally.sh  runtests.py  setup.cfg  tox.ini
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  security_report.md
.github/hooks/: check-docs.sh
.github/workflows/: README.md  ci.yml  deploy-docs.yml  docs-monitor.yml  publish.yml  release.yml  test.yml
django_rls/: __init__.py  __version__.py  middleware.py  models.py  policies.py
django_rls/backends/: __init__.py
docs/: PYPI_SETUP.md
documentation/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentation/docs/: api-reference.md  intro.md
documentation/static/: CNAME
documentations/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
documentations/docs/: installation.md  intro.md  quick-start.md
examples/: migration_example.py  settings_example.py
examples/basic_usage/: README.md  __init__.py  models.py
examples/tenant_based/: __init__.py  middleware.py  models.py
examples/user_based/: __init__.py  models.py
scripts/: bump_version.py  deploy-docs.sh  init-postgres.sh  preflight_check.py  release.sh  setup_dev.sh  test_postgresql.py
tests/: __init__.py  apps.py  conftest.py  models.py  settings.py  test_apps.py  test_flexible_types.py  test_issue_14_joins.py  test_middleware.py  test_models.py  test_policies.py  test_pythonic_policies.py  test_schema_editor.py  test_security.py  urls.py
tests/audit/: test_app_layer.py  test_complex_queries.py  test_edge_cases.py  test_happy_path.py  test_leakage.py  test_performance.py
tests/enterprise/: test_complex_acls.py  test_recursive_hierarchy.py
tests/extensive/: test_hypothesis.py  test_policy_permutations.py  test_query_patterns.py
tests/integration/: test_configuration.py  test_context_processors.py  test_policy_audit.py  test_policy_updates.py  test_postgres_rls.py
tests/migrations/: __init__.py  (+4 more)
(+31 files in other folders)
